--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -25,7 +25,7 @@
                                         implementationClass="com.chm.plugin.idea.forestx.provider.ForestMethodProvider"/>
 
 
-        <toolWindow id="Forest" secondary="false" anchor="right" icon="/icons/forest-16x16.png"
+        <toolWindow id="Forest" secondary="false" anchor="right" icon="/icons/forest-logo-gray-13x13.svg"
                     factoryClass="com.chm.plugin.idea.forestx.tw.RightSidebarToolWindowFactory"/>
 
         <postStartupActivity implementation="com.chm.plugin.idea.forestx.startup.MyStartupActivity"/>
