feat: Forest模板语法解析 feat: YAML配置跳转 feat: YAML配置引用代码补全

--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 intellij {
     version = '2020.2.4'
     type 'IU' // 企业版
-    plugins = ['java', 'Spring', 'SpringBoot']
+    plugins = ['java', 'Spring', 'SpringBoot', 'yaml']
 
     pluginName 'ForestX'
     sandboxDirectory = "${rootProject.rootDir}/idea-sandbox"
