--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,25 +1,18 @@
-<idea-plugin>
-    <id>com.chm.plugin.idea.forestx</id>
+<idea-plugin require-restart="false" allow-bundled-update="true" url="https://gitee.com/CHMing7/ForestX">
+    <id>com.chm.plugin.idea.ForestX</id>
     <name>ForestX</name>
     <vendor email="654849388@qq.com" url="https://gitee.com/chming7/ForestX">ForestX</vendor>
 
-    <description><![CDATA[
-    Forest Plugin
-    ]]></description>
 
     <!-- please see https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html
          on how to target different products -->
+    <depends>com.intellij.modules.platform</depends>
+    <depends>com.intellij.modules.lang</depends>
     <depends>com.intellij.modules.java</depends>
     <depends>com.intellij.properties</depends>
     <depends>org.jetbrains.plugins.yaml</depends>
-    <!-- support aliases -->
-    <depends optional="true" config-file="spring.xml">com.intellij.spring</depends>
-    <!-- support aliases -->
-    <depends optional="true" config-file="spring-boot.xml">com.intellij.spring.boot</depends>
-    <!-- support aliases -->
+    <depends>org.intellij.intelliLang</depends>
 
-
-    <depends>com.intellij.java</depends>
 
     <extensions defaultExtensionNs="com.intellij">
         <!-- Add your extensions here -->
