pref: 监听项目树节点变化

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -40,6 +40,7 @@
                     factoryClass="com.chm.plugin.idea.forestx.tw.RightSidebarToolWindowFactory"/>
 
         <postStartupActivity implementation="com.chm.plugin.idea.forestx.startup.MyStartupActivity"/>
+        <postStartupActivity implementation="com.chm.plugin.idea.forestx.listener.ProjectViewPsiTreeChangeListener$MyStartupActivity"/>
 
         <!-- Forest模板语言解析器定义 -->
         <lang.parserDefinition language="ForestTemplate"
@@ -69,7 +70,6 @@
         <multiHostInjector implementation="com.chm.plugin.idea.forestx.template.ForestTemplateToJavaInjector"/>
 
     </extensions>
-
 
     <actions>
         <!-- Add your actions here -->
