pref: 修改2022.3兼容性问题

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -40,7 +40,8 @@
                     factoryClass="com.chm.plugin.idea.forestx.tw.RightSidebarToolWindowFactory"/>
 
         <postStartupActivity implementation="com.chm.plugin.idea.forestx.startup.MyStartupActivity"/>
-        <postStartupActivity implementation="com.chm.plugin.idea.forestx.listener.ProjectViewPsiTreeChangeListener$MyStartupActivity"/>
+        <postStartupActivity
+                implementation="com.chm.plugin.idea.forestx.listener.ProjectViewPsiTreeChangeListener$MyStartupActivity"/>
 
         <!-- Forest模板语言解析器定义 -->
         <lang.parserDefinition language="ForestTemplate"
