--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,5 +1,8 @@
 <idea-plugin require-restart="false" allow-bundled-update="true" url="https://gitee.com/CHMing7/ForestX">
     <id>com.chm.plugin.idea.ForestX</id>
+    <name>ForestX</name>
+    <!-- 插件版本号 -->
+    <version>1.0</version>
     <vendor email="654849388@qq.com" url="https://gitee.com/chming7/ForestX">ForestX</vendor>
 
     <description><![CDATA[
