--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 pluginGroup=com.chm.plugin.idea
 pluginName=ForestX
 # SemVer format -> https://semver.org
-pluginVersion=1.0.9
+pluginVersion=1.0.10
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
-pluginSinceBuild=203.*
+pluginSinceBuild=221
 pluginUntilBuild=223.*
 # IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
 platformType=IU
-platformVersion=2022.2.4
+platformVersion=2022.1
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
 platformPlugins=com.intellij.java, com.intellij.properties, org.jetbrains.plugins.yaml, org.intellij.intelliLang
